--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
   application:
     name: gateway
+  # config:
+  #   import: "configserver:"
+  # cloud:
+  #   config:
+  #     uri: ${SPRING_CLOUD_CONFIG_URI:http://config-server:7777}
